Update feature description and add images

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="wellcome-heading">
                         <h2>FreeBee</h2>
                         <h3>F</h3>
-                        <p>Everything You Need. To Start Selling Online Beautifully</p>
+                        <!-- <p>Everything You Need. To Start Selling Online Beautifully</p> -->
                     </div>
                     <div class="get-start-area">
                         <!-- Download Area Start -->
@@ -104,32 +104,35 @@
         <div class="special_description_area mt-150">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <div class="special_description_img">
-                            <img src="img/bg-img/special.png" alt="">
+                    <div class="col-lg-6" style="display: flex; justify-content: center;">
+                        <div class="special_description_img" style="max-width: 50%;">
+                            <img src="img/bg-img/newsfeed.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6 col-xl-5 ml-xl-auto">
                         <div class="special_description_content">
                             <h2>Realtime News Feed</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                            <p>We give you the best news, handpicked by experts from all around the world exclusively for you. Now enjoy a seamless news reading experience with our app and stay in touch with the world!</p>
                         </div>
                     </div>
-
+                </div>
+                <br /><br /><br />
+                <div class="row">
                     <div class="col-lg-6 col-xl-5 ml-xl-auto">
                         <div class="special_description_content">
                             <h2>Rewards for watching Ads</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                            <p>One of the easiest ways to make money online is with FreeBee. You will earn money for watching a variety of ads personalized to your interest. It’s even possible to earn tens of thousands of rupees every month just using our app daily. Plan to be the next millionaire? Download Freebee</p>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="special_description_img">
-                            <img src="img/bg-img/special.png" alt="">
+                    <div class="col-lg-6" style="display: flex; justify-content: center;">
+                        <div class="special_description_img" style="max-width: 50%;">
+                            <img src="img/bg-img/rewards.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <br /><br /><br /><br />
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -149,7 +152,7 @@
                             <i class="ti-mobile" aria-hidden="true"></i>
                         </div>
                         <h4>Easy to use</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <p>We provide a easy-to-use and simple user interface to which allows you to have the best news feed experience</p>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -159,7 +162,7 @@
                             <i class="ti-ruler-pencil" aria-hidden="true"></i>
                         </div>
                         <h4>User Friendly Ads</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <p>After in-depth research by senior design engineers, we have carefully crafted our app so that the user's comfort is the highest priority</p>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -169,7 +172,7 @@
                             <i class="ti-settings" aria-hidden="true"></i>
                         </div>
                         <h4>Manage Ad Preferences</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <p>We give you the freedom to choose which Ads do you want to see amongst the wide range of advertisements</p>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -179,7 +182,7 @@
                             <i class="ti-mobile" aria-hidden="true"></i>
                         </div>
                         <h4>Fun Content</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <p>Going only through the newsfeed makes it quite monotnonic for which we bring in fun content for you</p>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -189,7 +192,7 @@
                             <i class="ti-ruler-pencil" aria-hidden="true"></i>
                         </div>
                         <h4>Lottery System</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <p>Try your luck with our lottery system and stand a chance to win additional rewards every day</p>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -199,7 +202,7 @@
                             <i class="ti-settings" aria-hidden="true"></i>
                         </div>
                         <h4>Track your rewards</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <p>Just like your orders or bank statements, we provide a handy way to track and manage your rewards</p>
                     </div>
                 </div>
             </div>
@@ -487,7 +490,7 @@
         <!-- Foooter Text-->
         <div class="copyright-text">
             <!-- ***** Removing this text is now allowed! This template is licensed under CC BY 3.0 ***** -->
-            <p>Copyright ©2017 Ca. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+            <p>Copyright ©2018 Designed by <a href="https://cribblservices.com.com" target="_blank">Cribbl</a></p>
         </div>
     </footer>
     <!-- ***** Footer Area Start ***** -->
