--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                         </div>
                         <h4>Easy to use</h4>
                         <p>We provide a easy-to-use and simple user interface to which allows you to have the best news feed experience</p>
+                        <a data-toggle="modal" data-target="#myModal" style="cursor: pointer;">Read More</a>
+                        <!-- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button> -->
+
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -494,6 +497,27 @@
         </div>
     </footer>
     <!-- ***** Footer Area Start ***** -->
+
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Modal Header</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <p>Some text in the modal.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="cursor: pointer;">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
 
     <!-- Jquery-2.2.4 JS -->
     <script src="js/jquery-2.2.4.min.js"></script>
